fix: address PR feedback. Improve tests